--- a/gb/20/1/22/n11812416.md
+++ b/gb/20/1/22/n11812416.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rkkcu2059/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rkkcu2059/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rkkcu2059/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rkkcu2059/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rkkcu2059/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rkkcu2059/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rkkcu2059/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rkkcu2059/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rkkcu2059/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rkkcu2059/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rkkcu2059/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rkkcu2059/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kztpea348/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kztpea348/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kztpea348/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>一轻轨在悉尼市政厅抛锚 9车乘客乱作一团</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/2020-01-22-17294-SYNEY-LIGHT-RAIL-STOCK_20191214001437919149-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/2020-01-22-17294-SYNEY-LIGHT-RAIL-STOCK_20191214001437919149-600x400.jpg" />
 <h6>一列轻轨列车在悉尼市正厅附近抛锚一个多小时，致使另外9辆列车无法抵达终点，乘客被迫中途下车，引发一片混乱。(AAP Image/Paul Braven) 
 </h6>
 <hr>
-<p>【大纪元2020年01月22日讯】（大纪元记者肖婕澳洲悉尼编译报导）周二下午交通高峰时期，一列<a href="https://github.com/rkkcu2059/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E5%88%97%E8%BD%A6.md">轻轨列车</a>在<a href="https://github.com/rkkcu2059/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E5%B8%82.md">悉尼市</a>正厅附近抛锚一个多小时，致使另外9辆列车无法抵达终点，乘客被迫中途下车，引发一片混乱。</p>
-<p>当日下午4点左右，<a href="https://github.com/rkkcu2059/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E5%B8%82.md">悉尼市</a>政厅（Town Hall）和环形码头（Circular Quay）之间的轻轨服务停止，一辆列车在悉尼市政厅附近突然发生机械故障，维修人员花了约90分钟才把列车修好。</p>
-<p>下午6点15分左右，同一列<a href="https://github.com/rkkcu2059/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E5%88%97%E8%BD%A6.md">轻轨列车</a>在前往兰德威克（Randwick）停车场的途中又再次抛锚，直到晚上7点才重新启动。</p>
-<p>沮丧的<a href="https://github.com/rkkcu2059/djy/blob/master/gb/tag/%E4%B8%8A%E7%8F%AD%E6%97%8F.md">上班族</a>在社交媒体上发泄着他们的不满。运营轻轨的ALTRAC公司为给乘客带来的不便表示道歉，并说“系统中的问题”已得到解决，乘客的耐心值得赞赏。</p>
+<p>【大纪元2020年01月22日讯】（大纪元记者肖婕澳洲悉尼编译报导）周二下午交通高峰时期，一列<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E5%88%97%E8%BD%A6.md#1">轻轨列车</a>在<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E5%B8%82.md#1">悉尼市</a>正厅附近抛锚一个多小时，致使另外9辆列车无法抵达终点，乘客被迫中途下车，引发一片混乱。</p>
+<p>当日下午4点左右，<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E5%B8%82.md#1">悉尼市</a>政厅（Town Hall）和环形码头（Circular Quay）之间的轻轨服务停止，一辆列车在悉尼市政厅附近突然发生机械故障，维修人员花了约90分钟才把列车修好。</p>
+<p>下午6点15分左右，同一列<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E8%BD%BB%E8%BD%A8%E5%88%97%E8%BD%A6.md#1">轻轨列车</a>在前往兰德威克（Randwick）停车场的途中又再次抛锚，直到晚上7点才重新启动。</p>
+<p>沮丧的<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E4%B8%8A%E7%8F%AD%E6%97%8F.md#1">上班族</a>在社交媒体上发泄着他们的不满。运营轻轨的ALTRAC公司为给乘客带来的不便表示道歉，并说“系统中的问题”已得到解决，乘客的耐心值得赞赏。</p>
 <p>该公司发言人说：“受影响的乘客已从停在市区的9辆列车上下车，并被建议改乘往返于市政厅与环形码头的火车。”</p>
 <p>耗资29亿澳元的连接兰德威克和悉尼港的轻轨自去年12月中旬开通以来一直麻烦不断。</p>
 <p>目前，轻轨列车平均每天运送4.3万名乘客，自去年12月14日以来，已完成了120多万个旅程。</p>
@@ -18,38 +18,50 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/22/n11812416.htm">一轻轨在悉尼市政厅抛锚 9车乘客乱作一团</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11806763.htm">本周起悉尼轻轨加快运行 总行程时间减10%</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11727399.htm">悉尼轻轨通过高峰期考验 乘客赞舒适方便</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725675.htm">悉尼新轻轨列车首日通勤一波三折</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725452.htm">全程耗时50分钟 悉尼新轻轨被批“太慢”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/14/n11723229.htm">悉尼新轻轨正式开通 本周末免费向公众开放</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11701972.htm">悉尼轻轨12月14日正式开通 首周末乘车免费</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801312.htm">【持续更新】武汉肺炎扩至24省市 440确诊9死</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/21/n11810001.htm">武汉肺炎急速蔓延 专家：“毒王”或已出现</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/21/n11809933.htm">武汉“封城” 千万人口仅61家发热门诊</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/26/n11280786.htm">走近台前台后的川普 大纪元专访总统儿媳</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776367.htm">“贤”的简化汉字 暗藏什么可怕后果？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793221.htm">【历史回眸】做梦都是灭共复国的上将陈诚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11778584.htm">【命理】天灾注死者天有定 古北京大地震幼儿见证</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807684.htm">网红比熊爆料遭霸凌 团长游否希回应此事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805358.htm">与轧故宫红三代同名遭骂 女星高露无辜躺枪</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807287.htm">美国歌手在台上唱到一半突然道歉 随即猝死</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/21/n11809509.htm">林志玲低调现身《红白》 全程观赏Akira演出</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11808467.htm">武汉肺炎刷屏 影视股狂跌 徐峥新片宣布提档</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807565.htm">【拍案惊奇】武汉肺炎扩散 15万港人反暴政</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/21/n11811218.htm">【热点互动】武汉肺炎升级 后果如SARS重现？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807690.htm">专访前马英九发言人徐巧芯：国民党为何惨败（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807770.htm">武汉肺炎爆发 钟南山确认人传人 习李发话</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11808379.htm">北京朝阳医院砍医事件 20名记者被扣</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807894.htm">“故宫奔驰女”发酵 何家揭红三代瞒亲友秘婚</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/12/5/n11701972.md#1">悉尼轻轨12月14日正式开通 首周末乘车免费</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/12/14/n11723229.md#1">悉尼新轻轨正式开通 本周末免费向公众开放</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/12/16/n11725452.md#1">全程耗时50分钟 悉尼新轻轨被批“太慢”</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/12/16/n11725675.md#1">悉尼新轻轨列车首日通勤一波三折</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/12/17/n11727399.md#1">悉尼轻轨通过高峰期考验 乘客赞舒适方便</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/1/20/n11806763.md#1">本周起悉尼轻轨加快运行 总行程时间减10%</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488313.md#1">澳日外长发布联合声明 拟增强印太安全协作</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487583.md#1">时隔13年 澳洲重回四国海上联合军演</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487858.md#1">仅增1例 无感染者死亡  维州疫情减轻至新低</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486281.md#1">澳议员：人权须高于体育 奥委会应拒绝中共</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rkkcu2059/djy/blob/master/gb/20/1/22/n11812416.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rkkcu2059/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rkkcu2059/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rkkcu2059/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rkkcu2059/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rkkcu2059/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234388.md#1" target="_blank">【征文】文宇：科举千年兴衰录（三）</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546426.md#1" target="_blank">中共强摘器官证据呈递联合国 媒体聚焦</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487770.md#1">【远见快评】拜登家丑闻4连爆 中共人质外交</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486847.md#1">【珍言真语】梁锦祥：拜登丑闻曝中共靠港漂白</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486080.md#1">丁小芹卖假包需入狱服刑 判刑2年半定谳</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485655.md#1">全球15国民调：台湾人最希望川普当选</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/22/n11812416.htm">一轻轨在悉尼市政厅抛锚 9车乘客乱作一团</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kztpea348/djy/blob/master/gb/20/1/22/n11812416.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kztpea348/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
